--- a/style.css
+++ b/style.css
@@ -115,8 +115,14 @@ body {
     /* CSS for the unipolar-nrz div */
     display: flex;
     flex-direction: column;
+    transform: scale(1); 
+    transition: transform 1s ease;
 }
 
+#unipolar-nrz:hover {
+    transform: scale(1.03); 
+    transition: transform 1s ease;
+}
 #unipolar-nrz-svg {
     display: flex;
     flex-direction: column;
