--- a/style.css
+++ b/style.css
@@ -1,285 +1,409 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
     background: linear-gradient(to bottom, #2196F3, #64B5F6, #90CAF9, #BBDEFB);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 10px 20px;
-    border-radius: 4px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-}
-
-.navbar-logo img {
-    height: 30px;
-    width: 30px;
-}
-
-.navbar-links ul {
-    list-style: none;
-}
-
-.navbar-links li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-.navbar-links li:last-child {
-    margin-right: 0;
-}
-
-.navbar-links a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    padding: 5px;
-}
-
-.dropdown-content {
-    position: absolute;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-    padding: 8px 0;
-    display: none;
-}
-
-.dropdown-content li {
-    display: block;
     margin: 0;
-    padding: 5px 20px;
-}
-
-.dropdown-content li a {
-    color: #333;
-    text-decoration: none;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-
-.github-icon {
-    width: 20px;
-    height: 20px;
-    fill: #000;
-    margin-left: 5px;
-}
-
-.container {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    /* For small devices */
-}
-
-.heading {
-    text-align: center;
-    font-size: 24px;
-    color: #2196F3;
-    margin-bottom: 16px;
-}
-
-.lines {
-    margin-bottom: 16px;
-}
-
-.lines p {
-    margin: 0;
-    line-height: 1.5;
-}
-
-.lines p {
-    margin: 0;
-    line-height: 1.5;
-    position: relative;
-    padding-bottom: 15px;
-}
-
-.input-button-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.input-box {
-    flex: 1;
-    padding: 8px;
-    margin-right: 8px;
-    /* Add margin between the input box and button on larger devices */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 100%;
-}
-
-.generate-btn {
-    background-color: #2196F3;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 8px 16px;
-    cursor: pointer;
-    min-width: 120px;
-}
-
-/* Button Hover Effect */
-.generate-btn:hover {
-    background-color: #1976D2;
-}
-
-/* CSS for the output container and its child divs */
-#output-container {
-    display: none;
-    /* Initially hidden */
-    margin-top: 20px;
-}
-
-#output-container>div {
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color: #fafafa;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow:
-        0 2px 4px rgba(0, 0, 0, 0.1),
-        /* Top shadow */
-        0 4px 8px rgba(0, 0, 0, 0.1),
-        /* Middle shadow */
-        0 8px 16px rgba(0, 0, 0, 0.1);
-    /* Bottom shadow */
-}
-
-
-#output-container>div:first-child {
-    font-weight: bold;
-}
-
-#output-container>div:not(:first-child) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    color: #3f3f3f;
-}
-
-/* Add additional styling for individual divs if needed */
-/* #input-bits {
-    color: rgb(68, 194, 51) !important;
-    max-height: 10px !important;
-} */
-
-#unipolar-nrz {
-    /* CSS for the unipolar-nrz div */
-    display: flex;
-    flex-direction: column;
-}
-
-#unipolar-nrz-svg {
-    display: flex;
-    flex-direction: column;
-}
-
-#polar-nrz-l {
-    /* CSS for the polar-nrz-l div */
-    display: flex;
-    flex-direction: column;
-}
-
-#polar-nrz-i {
-    /* CSS for the polar-nrz-i div */
-    display: flex;
-    flex-direction: column;
-}
-
-#polar-rz {
-    /* CSS for the polar-rz div */
-    display: flex;
-    flex-direction: column;
-}
-
-#manchester {
-    /* CSS for the manchester div */
-    display: flex;
-    flex-direction: column;
-}
-
-#diff-manchester {
-    /* CSS for the diff-manchester div */
-    display: flex;
-    flex-direction: column;
-}
-
-#ami {
-    /* CSS for the ami div */
-    display: flex;
-    flex-direction: column;
-}
-
-#pseudoternary {
-    /* CSS for the pseudoternary div */
-    display: flex;
-    flex-direction: column;
-}
-
-.line-transition {
-    transition: all 2s ease;
-    /* transition duration and timing function */
-}
-
-/* Media Query for Smaller Devices */
-@media (max-width: 800px) {
-    .input-button-container {
-        padding-left: 5%;
-        padding-right: 5%;
+  }
+  
+  #Hero {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      min-height: calc(100vh - 110px);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  /* NavBar css */
+  /* Navigation Variables */
+  :root {
+      --content-width: 1000px;
+      --breakpoint: 799px;
+      --nav-height: 70px;
+      --nav-background: #262626;
+      --nav-font-color: #ffffff;
+      --link-hover-color: rgba(144, 202, 249, 0.8);
     }
-}
-
-@media (max-width: 600px) {
-    body {
-        padding: 30px;
+    
+    /* Outer navigation wrapper */
+    .navigation {
+      height: var(--nav-height);
+      background: var(--nav-background);
     }
-
-    .container {
-        width: 95%;
+    
+    /* Logo and branding */
+    .brand {
+      position: absolute;
+      padding-left: 20px;
+      float: left;
+      line-height: var(--nav-height);
+      text-transform: uppercase;
+      font-size: 1.4em;
     }
-
-    .input-button-container {
-        /* Changed to column for smaller devices */
-        align-items: center;
-        flex-direction: column;
-        padding-left: 0%;
-        padding-right: 0%;
+    
+    .brand a,
+    .brand a:visited {
+      color: var(--nav-font-color);
+      text-decoration: none;
     }
-
-    .input-box {
+    
+    /* Container with no padding for navbar */
+    .nav-container {
+      max-width: var(--content-width);
+      position: relative;
+      margin: 0 auto;
+    }
+    
+    /* Navigation */
+    nav {
+      float: right;
+    }
+    
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    
+    nav ul li {
+      float: left;
+      position: relative;
+    }
+    
+    nav ul li a,
+    nav ul li a:visited {
+      display: block;
+      padding: 0 20px;
+      line-height: var(--nav-height);
+      background: var(--nav-background);
+      color: var(--nav-font-color);
+      text-decoration: none;
+    }
+    
+    nav ul li a:hover {
+      background: var(--link-hover-color);
+      color: var(--nav-font-color);
+    }
+    
+    nav ul li a:not(:only-child):after {
+      padding-left: 4px;
+      content: ' ▾';
+    }
+    
+    nav ul li ul li {
+      min-width: 190px;
+    }
+    
+    nav ul li ul li a {
+      padding: 15px;
+      line-height: 20px;
+    }
+    
+    /* Dropdown list binds to JS toggle event */
+    .nav-dropdown {
+      position: absolute;
+      display: none;
+      z-index: 1;
+      box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+    }
+    
+    /* Mobile navigation */
+    .nav-mobile {
+      display: none;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: var(--nav-background);
+      height: var(--nav-height);
+      width: var(--nav-height);
+    }
+    
+    @media only screen and (max-width: 798px) {
+      /* Hamburger nav visible on mobile only */
+      .nav-mobile {
+        display: block;
+      }
+    
+      nav {
         width: 100%;
-        /* Full width for the input box on smaller devices */
-        max-width: 300px;
-        margin-bottom: 8px;
-        /* Add a small margin below the input for smaller devices */
+        padding: var(--nav-height) 0 15px;
+      }
+    
+      nav ul {
+        display: none;
+      }
+    
+      nav ul li {
+        float: none;
+      }
+    
+      nav ul li a {
+        padding: 15px;
+        line-height: 20px;
+      }
+    
+      nav ul li ul li a {
+        padding-left: 30px;
+      }
+    
+      .nav-dropdown {
+        position: static;
+      }
     }
-
-    .generate-btn {
-        min-width: none;
+    
+    @media screen and (min-width: var(--breakpoint)) {
+      .nav-list {
+        display: block !important;
+      }
     }
-}
+    
+    #nav-toggle {
+      position: absolute;
+      left: 18px;
+      top: 22px;
+      cursor: pointer;
+      padding: 10px 35px 16px 0px;
+    }
+    
+    #nav-toggle span,
+    #nav-toggle span:before,
+    #nav-toggle span:after {
+      cursor: pointer;
+      border-radius: 1px;
+      height: 5px;
+      width: 35px;
+      background: var(--nav-font-color);
+      position: absolute;
+      display: block;
+      content: '';
+      transition: all 300ms ease-in-out;
+    }
+    
+    #nav-toggle span:before {
+      top: -10px;
+    }
+    
+    #nav-toggle span:after {
+      bottom: -10px;
+    }
+    
+    #nav-toggle.active span {
+      background-color: transparent;
+    }
+    
+    #nav-toggle.active span:before,
+    #nav-toggle.active span:after {
+      top: 0;
+    }
+    
+    #nav-toggle.active span:before {
+      transform: rotate(45deg);
+    }
+    
+    #nav-toggle.active span:after {
+      transform: rotate(-45deg);
+    }
+  
+    
+  /* Container CSS */
+  .container {
+      background-color: #fff;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 80%;
+      /* For small devices */
+  }
+  
+  .heading {
+      text-align: center;
+      font-size: 24px;
+      color: #2196F3;
+      margin-bottom: 16px;
+  }
+  
+  .lines {
+      margin-bottom: 16px;
+  }
+  
+  .lines p {
+      margin: 0;
+      line-height: 1.5;
+  }
+  
+  .lines p {
+      margin: 0;
+      line-height: 1.5;
+      position: relative;
+      padding-bottom: 15px;
+  }
+  
+  .input-button-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-left: 10%;
+      padding-right: 10%;
+  }
+  
+  .input-box {
+      flex: 1;
+      padding: 8px;
+      margin-right: 8px;
+      /* Add margin between the input box and button on larger devices */
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 100%;
+  }
+  
+  .generate-btn {
+      background-color: #2196F3;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      padding: 8px 16px;
+      cursor: pointer;
+      min-width: 120px;
+  }
+  
+  /* Button Hover Effect */
+  .generate-btn:hover {
+      background-color: #1976D2;
+  }
+  
+  /* CSS for the output container and its child divs */
+  #output-container {
+      display: none;
+      /* Initially hidden */
+      margin-top: 20px;
+  }
+  
+  #output-container>div {
+      padding: 10px;
+      margin-bottom: 20px;
+      background-color: #fafafa;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-shadow:
+          0 2px 4px rgba(0, 0, 0, 0.1),
+          /* Top shadow */
+          0 4px 8px rgba(0, 0, 0, 0.1),
+          /* Middle shadow */
+          0 8px 16px rgba(0, 0, 0, 0.1);
+      /* Bottom shadow */
+  }
+  
+  
+  #output-container>div:first-child {
+      font-weight: bold;
+  }
+  
+  #output-container>div:not(:first-child) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      color: #3f3f3f;
+  }
+  
+  /* Add additional styling for individual divs if needed */
+  #input-bits {
+      color: rgb(68, 194, 51) !important;
+      max-height: 10px !important;
+  }
+  
+  #unipolar-nrz {
+      /* CSS for the unipolar-nrz div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #unipolar-nrz-svg {
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #polar-nrz-l {
+      /* CSS for the polar-nrz-l div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #polar-nrz-i {
+      /* CSS for the polar-nrz-i div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #polar-rz {
+      /* CSS for the polar-rz div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #manchester {
+      /* CSS for the manchester div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #diff-manchester {
+      /* CSS for the diff-manchester div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #ami {
+      /* CSS for the ami div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  #pseudoternary {
+      /* CSS for the pseudoternary div */
+      display: flex;
+      flex-direction: column;
+  }
+  
+  .line-transition {
+      transition: all 2s ease;
+      /* transition duration and timing function */
+  }
+  
+  /* Media Query for Smaller Devices */
+  @media (max-width: 800px) {
+      .input-button-container {
+          padding-left: 5%;
+          padding-right: 5%;
+      }
+  }
+  
+  @media (max-width: 600px) {
+      #Hero {
+          padding: 30px;
+      }
+  
+      .container {
+          width: 95%;
+      }
+  
+      .input-button-container {
+          /* Changed to column for smaller devices */
+          align-items: center;
+          flex-direction: column;
+          padding-left: 0%;
+          padding-right: 0%;
+      }
+  
+      .input-box {
+          width: 100%;
+          /* Full width for the input box on smaller devices */
+          max-width: 300px;
+          margin-bottom: 8px;
+          /* Add a small margin below the input for smaller devices */
+      }
+  
+      .generate-btn {
+          min-width: none;
+      }
+  }
